--- a/crop.ipynb
+++ b/crop.ipynb
@@ -24,7 +24,7 @@
     "clip_model_id = \"openai/clip-vit-base-patch32\"\n",
     "sam_model_path = './sam_vit_h_4b8939.pth'\n",
     "yolo_model_path = './yolov8x.pt'\n",
-    "device = 'cuda:6'\n",
+    "device = ## Your device here\n",
     "\n",
     "blip_model, blip_vis_processors, _ = load_model_and_preprocess(name=\"blip2_t5\", model_type=\"pretrain_flant5xl\", is_eval=True, device=device)\n",
     "\n",
